<resources>
    <string name="app_name">LoginDesign</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="Login">Login</string>
    <string name="forgetPassword">FORGET PASSWORD ?</string>
    <string name="newUser">New User?</string>
    <string name="signUp">Sign Up</string>
    <string name="or">or</string>
    <string name="EditProfile">Edit Profile</string>
    <string name="username">Mohammad Chhadi</string>
    <string name="date">Birthday</string>
    <string name="instaAcc">Instagram account</string>
    <string name="phoneNum">Phone number</string>


</resources>